--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
+body{
+    margin-top: 60px;
+    margin-left: 100px;
+    margin-right: 100px;
+    background-color: aqua;
+    text-align: center;
+    
+}
 .container{
     max-width: 450px;
     width: 100%;
+    align-items: center;
 }
 .tasks{
     width:100%;
