--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body{
     max-width: 450px;
     width: 100%;
     align-items: center;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 .tasks{
     width:100%;
